--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <body>
         <h1>s</h1>
         <p>Soon™</p>
-    <iframe src="brm75.github.io/Random Fake MMO (Test Mode).html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    <iframe src="Random Fake MMO (Test Mode).html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
