--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>s</h1>
-        <p>Soon™</p>
-    <iframe id ="ssvj" src="Random Fake MMO (Test Mode).html" width="960" height="720" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
-<iframe id ="aag" width="1280" height="720" src="https://www.youtube.com/embed/jW8B0VXMQWE" title="Duck Life Menu Theme Extended" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<head>
+<title>My Page</title>
+<style>
+  body {
+    font-family: sans-serif;
+    text-align: center;
+    background-color: #f0f0f0; 
+  }
+
+  h1 {
+    color: #333; 
+    margin-bottom: 20px;
+  }
+
+  p {
+    color: #666; 
+    margin-bottom: 30px;
+  }
+
+  iframe {
+    border: 1px solid #ccc; 
+    margin-bottom: 20px;
+  }
+
+  a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff; 
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+  }
+
+  a:hover {
+    background-color: #0056b3;
+  }
+</style>
+</head>
+<body>
+  <h1>s</h1>
+  <p>Soon™</p>
+  <iframe id="ssvj" src="Random Fake MMO (Test Mode).html" width="960" height="720" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  <iframe id="aag" width="1280" height="720" src="https://www.youtube.com/embed/jW8B0VXMQWE" title="Duck Life Menu Theme Extended" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  <a href="https://brm75.carrd.co/" target="_blank">!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!1</a>
 </body>
 </html>
