--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/jW8B0VXMQWE" title="Duck Life Menu Theme Extended" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
 
-  <a href="https://brm75.carrd.co/" target="_blank">Visit my Carrd</a>
+  <a href="https://brm75.carrd.co/" target="_blank">don't click!!!! (actually who cares XDLOL)</a>
 </body>
 </html>
