--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   body {
     font-family: sans-serif;
     text-align: center;
-    background-color: #f0f0f0;
+    background-image: url('6novs8gv9kfa1 (1).jpg'); 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center center; 
+    color: #333; 
   }
 
   h1 {
@@ -38,11 +42,10 @@
     background-color: #0056b3;
   }
 
-  
   .youtube-embed {
-    width: 560px; 
-    height: 315px; 
-    margin: 20px auto; 
+    width: 560px;
+    height: 315px;
+    margin: 20px auto;
   }
 </style>
 </head>
