--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     font-family: sans-serif;
     text-align: center;
     background-image: url('6novs8gv9kfa1 (1).jpg'); 
-    background-size: cover; 
-    background-repeat: no-repeat; 
-    background-position: center center; 
-    color: #333; 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    color: #333;
   }
 
   h1 {
@@ -43,19 +43,44 @@
   }
 
   .youtube-embed {
+    width: 480px;
+    height: 270px;
+    margin-bottom: 20px;
+  }
+
+  .mmo-embed {
     width: 560px;
-    height: 315px;
-    margin: 20px auto;
+    height: 420px;
+    margin-bottom: 20px;
+  }
+
+
+  .left-third {
+    width: 33.33%; 
+    float: left; 
+    text-align: center; 
+  }
+
+
+  body::after {
+    content: "";
+    display: table;
+    clear: both;
   }
 </style>
 </head>
 <body>
   <h1>s</h1>
   <p>Soon™</p>
-  <iframe id="ssvj" src="Random Fake MMO (Test Mode).html" width="640" height="480" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
-  
-  <div class="youtube-embed">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/jW8B0VXMQWE" title="Duck Life Menu Theme Extended" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+  <div class="left-third">
+    <div class="mmo-embed">
+      <iframe id="ssvj" src="Random Fake MMO (Test Mode).html" width="560" height="420" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    </div>
+
+    <div class="youtube-embed">
+      <iframe width="480" height="270" src="https://www.youtube.com/embed/jW8B0VXMQWE" title="Duck Life Menu Theme Extended" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
   </div>
 
   <a href="https://brm75.carrd.co/" target="_blank">don't click!!!! (actually who cares XDLOL)</a>
