--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     margin-bottom: 20px;
   }
 
-
+  
   .left-third {
-    width: 33.33%; 
-    float: left; 
-    text-align: center; 
+    width: 33.33%;
+    float: left;
+    text-align: center;
   }
 
 
@@ -66,6 +66,14 @@
     content: "";
     display: table;
     clear: both;
+  }
+
+  
+  .button-container {
+    width: 33.33%;
+    float: left;
+    text-align: left; 
+    padding-left: 20px; 
   }
 </style>
 </head>
@@ -83,6 +91,8 @@
     </div>
   </div>
 
-  <a href="https://brm75.carrd.co/" target="_blank">don't click!!!! (actually who cares XDLOL)</a>
+  <div class="button-container">
+    <a href="https://brm75.carrd.co/" target="_blank">don't click!!!! (actually who cares XDLOL)</a>
+  </div>
 </body>
 </html>
