--- a/index.html
+++ b/index.html
@@ -49,31 +49,33 @@
   }
 
   .mmo-embed {
-    width: 560px;
-    height: 420px;
+    width: 480px; 
+    height: 360px; 
     margin-bottom: 20px;
   }
 
-  
+ 
   .left-third {
     width: 33.33%;
     float: left;
     text-align: center;
+    min-height: 600px; 
   }
 
-
+ 
   body::after {
     content: "";
     display: table;
     clear: both;
   }
 
-  
+
   .button-container {
     width: 33.33%;
     float: left;
-    text-align: left; 
-    padding-left: 20px; 
+    text-align: left;
+    padding-left: 20px;
+    margin-top: 600px; 
   }
 </style>
 </head>
@@ -83,7 +85,7 @@
 
   <div class="left-third">
     <div class="mmo-embed">
-      <iframe id="ssvj" src="Random Fake MMO (Test Mode).html" width="560" height="420" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <iframe id="ssvj" src="Random Fake MMO (Test Mode).html" width="480" height="360" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
 
     <div class="youtube-embed">
